Enhance documentation generation and GitHub Actions workflow
- Updated mkdocs.yml to include new plugins for improved documentation features.
- Added GitHub Actions workflow for automatic documentation generation on push and PR merge events.
- Improved verification steps for generated documentation and added deployment to GitHub Pages.
- Refined function call documentation in api.md for better clarity.
- Updated architecture and AI pipeline diagrams for accuracy and consistency.

--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -79,7 +79,7 @@ jobs:
         fi
         
         # Check if site was built
-        if [ -d "docs/site" ]; then
+        if [ -d "site" ]; then
           echo "✅ Documentation site built successfully"
         else
           echo "❌ Documentation site build failed"
@@ -91,7 +91,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/site
+        publish_dir: ./site
         publish_branch: gh-pages
         commit_message: |
           Deploy documentation from ${{ github.sha }}
