Fix MkDocs configuration path in GitHub Actions workflow

--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -71,7 +71,7 @@ jobs:
           exit 1
         fi
         
-        if [ -f "docs/mkdocs.yml" ]; then
+        if [ -f "mkdocs.yml" ]; then
           echo "✅ MkDocs configuration generated"
         else
           echo "❌ MkDocs configuration missing"
