--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,11 +8,7 @@ markdown_extensions:
 - fenced_code
 - admonition
 - pymdownx.details
-- pymdownx.superfences:
-    custom_fences:
-    - class: mermaid
-      format: pymdownx.superfences.fence_code_format
-      name: mermaid
+- pymdownx.superfences
 - pymdownx.highlight:
     anchor_linenums: true
 - pymdownx.inlinehilite
