--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 mkdocs==1.5.3
 mkdocs-material==9.4.7
 mkdocs-mermaid2-plugin==1.1.1
+mkdocs-git-revision-date-localized-plugin==1.2.1
+mkdocs-minify-plugin==0.7.1
 
 # Code analysis
 ast-tools==0.1.2
