--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,58 +1,32 @@
-docs_dir: docs
-markdown_extensions:
-- codehilite:
-    guess_lang: true
-- toc:
-    permalink: true
-- tables
-- fenced_code
-- admonition
-- pymdownx.details
-- pymdownx.superfences
-- pymdownx.highlight:
-    anchor_linenums: true
-- pymdownx.inlinehilite
-- pymdownx.tabbed:
-    alternate_style: true
-- pymdownx.tasklist:
-    custom_checkbox: true
-nav:
-- Home: index.md
-- Architecture: architecture.md
-- API Reference: api.md
-- AI Models: ai_models.md
-- AI Pipelines: ai_pipelines.md
-- Onboarding: onboarding.md
-- Code Quality: complexity.md
-plugins:
-- search
-site_description: Comprehensive documentation generated automatically from code analysis
+# Custom HTML-based documentation configuration
+docs_dir: html_templates
 site_dir: site
 site_name: Auto-Generated Documentation
+site_description: Comprehensive documentation generated automatically from code analysis
+
+# Custom theme configuration for HTML files
 theme:
-  features:
-  - navigation.tabs
-  - navigation.sections
-  - navigation.top
-  - navigation.tracking
-  - toc.integrate
-  - search.suggest
-  - search.highlight
-  - search.share
-  - content.tabs.link
-  - content.code.annotation
-  - content.code.copy
-  name: material
-  palette:
-  - accent: indigo
-    primary: indigo
-    scheme: default
-    toggle:
-      icon: material/brightness-7
-      name: Switch to dark mode
-  - accent: indigo
-    primary: indigo
-    scheme: slate
-    toggle:
-      icon: material/brightness-4
-      name: Switch to light mode
+  name: null
+  custom_dir: html_templates
+
+# Since we're using custom HTML, we don't need markdown extensions
+# but keeping minimal config for compatibility
+markdown_extensions: []
+
+# Navigation structure pointing to HTML files
+nav:
+- Home: index.html
+- Architecture: architecture.html
+- API Reference: api.html
+- AI Models: ai_models.html
+- AI Pipelines: ai_pipelines.html
+- Onboarding: onboarding.html
+- Code Quality: complexity.html
+
+# Minimal plugins - search is handled by custom JavaScript
+plugins: []
+
+# Extra configuration for custom HTML theme
+extra:
+  generator: Auto Documentation Generation System
+  version: 1.0.0
