Enhance documentation generation and quality analysis features
- Updated .gitignore to exclude the 'docs' directory.
- Added a new configuration option in doc_config.yaml to limit the number of detailed quality reports generated.
- Enhanced HTML templates for better presentation, including updates to api.html and complexity.html for improved user experience.
- Implemented mobile navigation toggle functionality in base.html for better accessibility on smaller screens.
- Refactored quality analysis logic in main.py to enhance insights using AI analysis, focusing on top modules.
- Improved quality assessment methods in quality_analyzer.py to support detailed function analysis and suggestions.
- Integrated caching and retry mechanisms in quality_llm_integration.py for more efficient LLM interactions.

--- a/config/doc_config.yaml
+++ b/config/doc_config.yaml
@@ -46,6 +46,9 @@ generation:
     api: "api_template.md"
     onboarding: "onboarding_template.md"
     base: "base_template.md"
+
+quality:
+  max_detailed_reports: 5  # Maximum number of detailed module quality reports to generate
   
 deployment:
   target: "github_pages"
